# uuid-lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp  uuid.cpp  uuid.h  vcpkg.json  xoroshiro128.cpp
benchmark/: CMakeLists.txt  uuid_bm.cpp  uuid_cmp_bm.cpp  uuid_equality_bm.cpp  uuid_factory_b.cpp
example/: CMakeLists.txt  main.cpp  xoroshiro128.cpp  xoroshiro128.h
include/: uuid.h  uuid.hpp  uuid_all.hpp  uuid_factory.h  uuid_factory.hpp  uuid_format.h  uuid_format.hpp  uuid_spec.h  uuid_types.h  xoroshiro128.h
src/: uuid.cpp  uuid_factory.cpp  uuid_spec.cpp  xoroshiro128.cpp
test/: CMakeLists.txt  main.cpp  uuid_tests.cpp
